[tool.poetry]
name = "pvzbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.10.0"
apscheduler = "^3.10.4"
pydantic-settings = "^2.3.4"
aiosqlite = "^0.20.0"
sqlalchemy = "^2.0.31"
gspread = "^6.1.2"

[tool.isort]
line_length = 80
atomic = true
include_trailing_comma = true
use_parentheses = true
profile = "black"
lines_after_imports = 2
combine_as_imports = true
multi_line_output = 3

[tool.black]
line-length = 80
target-version = ['py310']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
